# T5SmallInference

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  test_embedding.cpp  test_embedding_mpi.cpp  test_layer_norm.cpp  test_layer_norm_cudampi.cpp  test_layer_norm_mpi.cpp
common/: CMakeLists.txt
common/include/: attention.hpp  block.hpp  config.hpp  embedding.hpp  feedforward.hpp  layer_norm.hpp  linear.hpp  model.hpp  rms_norm.hpp  stack.hpp  tensor.hpp  tokenizer.hpp  weight_loader.hpp
common/python/: requirements.txt
common/python/t5_testkit/: config.py  main.py  utils.py
common/python/t5_testkit/cases/: attention_cases.py  embedding_cases.py  feedforward_cases.py  layernorm_cases.py  linear_cases.py  tensor_cases.py
common/python/t5_testkit/layers/: attention.py
common/src/: config.cpp  linear.cpp  model.cpp  tokenizer.cpp  weight_loader.cpp
testing/: CMakeLists.txt  README.md
testing/common/: test_runner.cpp  test_runner.hpp
testing/mpi/: mpi_test_runner.cpp  mpi_test_runner.hpp  test_mpi.cpp
testing/serial/: serial_test_runner.cpp  serial_test_runner.hpp  test_serial.cpp
tests/: CMakeLists.txt  test_mpi.cpp  test_plainC.cpp  test_tensor.cpp
version1_plainC/: CMakeLists.txt  main.cpp
version1_plainC/include/: block.hpp  embedding.hpp  feedforward.hpp  layer_norm.hpp  linear.hpp  matrix_ops.hpp  serial_model.hpp  stack.hpp  tensor.hpp
version1_plainC/src/: attention.cpp  block.cpp  embedding.cpp  feedforward.cpp  layer_norm.cpp  linear.cpp  matrix_ops.cpp  rms_norm.cpp  serial_model.cpp  stack.cpp  tensor.cpp
version2_mpi/: CMakeLists.txt  main.cpp
version2_mpi/include/: mpi_backend.hpp
version2_mpi/src/: tensor.cpp
version2_mpi/src/attention/: attention.cpp  relative_bias.cpp
version2_mpi/src/tensor/: softmax.cpp  tensor.cpp
version2_mpiOnly/: CMakeLists.txt  main.cpp
version2_mpiOnly/src/: block.cpp  embedding.cpp  feedforward.cpp  layer_norm.cpp  linear.cpp  model.cpp  rms_norm.cpp
version2_mpiOnly/src/attention/: attention_core.cpp
version2_mpiOnly/src/tensor/: matmul.cpp  softmax.cpp  tensor.cpp
version3_cuda/: CMakeLists.txt
version3_cuda/src/: block.cpp  feedforward.cpp
version3_cuda/src/tensor/: matmul_kernel.cu  softmax_kernel.cu
version3_cudaOnly/: CMakeLists.txt  main.cpp
version3_cudaOnly/src/: embedding.cu  layer_norm.cu  rms_norm.cu
version3_cudaOnly/src/attention/: attention.cpp  relative_bias_kernel.cu
version3_cudaOnly/src/tensor/: matmul_cuda.cu  tensor.cpp
version4_mpi_cuda/: CMakeLists.txt  main.cpp
version4_mpi_cuda/include/: attention_mpi.hpp
version4_mpi_cuda/src/: embedding.cu  model.cpp  rms_norm.cu
version4_mpi_cuda/src/attention/: attention.cpp  attention_core.cpp  relative_bias.cpp  relative_bias_cuda.cu
version4_mpi_cuda/src/tensor/: matmul.cpp  matmul_cuda.cu  softmax_cuda.cu  tensor.cpp
